alterações no potfolio

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     width: 400px;
     height: 250px;
     background-color:blanchedalmond;
-    border: 1px solid
+    border: 1px solid;
     flex-direction: column;
 }
 
@@ -16,16 +16,18 @@
     font-size: 20px;
     font-stretch: 20px;
     color:brown;
-    text-align:left;
-    background-color:antiquewhite;
+    text-align:center;
+    background-color:pink
 }
 
-h1 {
-    color: brown;
-    text-align:justify;
+#midias {
+    background-color: antiquewhite;
 }
 
 a {
     color:brown
 }
 
+h5 {
+    background-color:lightpink;
+}
